--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -1,8 +1,8 @@
-name: Generate hourly.json
+name: Convert spot prices to hourly
 
 on:
   schedule:
-    - cron: "55 23 * * *"   # каждый день в 23:55 UTC
+    - cron: "0 * * * *"   # запуск каждый час
   workflow_dispatch:
 
 jobs:
@@ -10,22 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: pip install requests pytz
 
       - name: Run converter
-        run: |
-          mkdir -p docs
-          python3 convert.py
+        run: python convert.py
 
-      - name: Commit and push result
+      - name: Commit and push
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add docs/hourly.json
-          git commit -m "Update hourly.json" || echo "No changes"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add hourly.json
+          git commit -m "update hourly prices" || echo "no changes"
           git push
