--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -2,7 +2,7 @@ name: Convert spot prices to hourly
 
 on:
   schedule:
-    - cron: "0 * * * *"  # каждый час
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -21,9 +21,9 @@ jobs:
       - name: Install dependencies
         run: pip install requests pytz
 
-      - name: Create hourly.json for Pages
+      - name: Generate hourly.json
         run: |
-          mkdir -p _site
+          mkdir -p public
           python3 - << 'EOF'
           import requests, json, datetime, pytz
           url = "https://spot.utilitarian.io/electricity/FI/latest/"
@@ -48,7 +48,7 @@ jobs:
                   "resolution": "1H"
               }
           }
-          with open("_site/hourly.json", "w") as f:
+          with open("public/hourly.json", "w") as f:
               json.dump(output, f, indent=2)
           EOF
 
@@ -56,4 +56,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+          publish_dir: ./public
