--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -2,17 +2,18 @@ name: Convert spot prices to hourly
 
 on:
   schedule:
-    - cron: "0 * * * *" # каждый час
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
@@ -23,7 +24,7 @@ jobs:
       - name: Generate hourly.json
         run: |
           mkdir -p public
-          python3 - <<'EOF'
+          python3 - << 'EOF'
           import requests, json, datetime, pytz
           url = "https://spot.utilitarian.io/electricity/FI/latest/"
           data = requests.get(url).json()
@@ -56,5 +57,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          # ветка gh-pages, не main
           publish_branch: gh-pages
