--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -2,7 +2,7 @@ name: Convert spot prices to hourly
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *" # запуск каждый час
   workflow_dispatch:
 
 jobs:
@@ -26,6 +26,7 @@ jobs:
           mkdir -p public
           python3 - << 'EOF'
           import requests, json, datetime, pytz
+
           url = "https://spot.utilitarian.io/electricity/FI/latest/"
           data = requests.get(url).json()
           tz = pytz.timezone("Europe/Helsinki")
@@ -60,3 +61,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           publish_branch: gh-pages
+          force_orphan: true   # <--- перезаписываем ветку полностью
